client/src/components/Contact/contact.scss
@import "../../../global/global.scss";

.background-headers {
  display: flex;
  justify-content: center;
  flex-direction: column;
  background-image: url("https://d1ytdcprkw2jhh.cloudfront.net/background6.jpg");
  padding: 120px 0;
  background-size: cover;
  background-attachment: fixed;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
  margin-bottom: 1em;
}

.contact-smaller-header {
  display: flex;
  padding-bottom: 1em;

  h3 {
    display: flex;
    justify-content: center;
    color: #fff;
    font-family: cursive;
  }
}

.contact-header {
  display: flex;

  h1 {
    display: flex;
    justify-content: center;
    font-size: 2em;
    color: #fff;
    font-family: "Roboto", sans-serif;
  }
}

.information {
  display: flex;
  flex-direction: column;
  font-size: 0.9em;

  .contact-info {
    display: inline;
    font-family: "Montserrat";
    font-weight: bold;
    line-height: 1.5em;
    text-align: center;
    border: 1px solid black;
    border-radius: 4px;

    .icon {
      text-align: center;
    }

    .phoneNumber {
      text-align: center;
    }

    .email {
      text-align: center;
    }

    .from {
      text-align: center;
    }
  }
}

.footer {
  position: relative;
}

.footerWrapper {
  display: flex;
  justify-content: center;
  padding: 20px;
  background-color: #1a1e23;
  color: #fff;

  .footerContainer {
    display: flex;
    justify-content: center;
    font-family: "Montserrat";
    font-weight: bold;
    font-size: 0.9em;
  }
}

.modal_container {
  display: flex;
  justify-content: center;
  font-size: 0.9em;

  .btn-info {
    background-color: #fff;
    border-color: #fff;
    color: black;
    font-family: "Montserrat";
    font-weight: bold;
  }

  .modal-content {
    font-family: "Montserrat";
    font-weight: bold;
  }

  .modal-title {
    text-align: center;
  }

  .modal-body {
    textarea {
      width: 100%;
    }
  }
}

.vertical-alignment-helper {
  display: table;
  height: 100%;
  width: 50%;
  margin: auto;
}
.vertical-align-center {
  /* To center vertically */
  display: table-cell;
  vertical-align: middle;
}

//mobile
@media only screen and (max-width: 425px) {
  .background-headers {
    background-attachment: initial;
  }

  .vertical-alignment-helper {
    width: 100%;
  }

  .information {
    padding: 1em;

    .contact-info {
      margin-bottom: 1em;
      padding-top: 0.2em;
    }
  }
}

@media only screen and (max-width: 552px) {
}

//tablets
@media only screen and (min-width: 426px) and (max-width: 960px) {
  .background {
    padding: 75px 0;
  }

  .information {
    display: grid;
    grid-template-columns: auto auto auto;
    padding-left: 1em;
    padding-right: 1em;

    .contact-info {
      padding-top: 0.3em;
      padding-bottom: 0.3em;
    }
  }
}

//desktop
@media only screen and (min-width: 961px) {
  .information {
    display: grid;
    grid-template-columns: auto auto auto;
    padding-bottom: 1em;
    padding-top: 1em;
    padding-left: 3em;
    padding-right: 3em;

    .contact-info {
      padding-top: 0.3em;
      padding-bottom: 0.3em;
    }
  }
}

